--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
+/* Apply the Itim font globally */
+/* html {
+  font-family: 'Itim', cursive;
+} */
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -17,7 +24,8 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: 'Itim', cursive;
 }
 
 @layer utilities {
