--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,16 +10,16 @@
 } */
 
 :root {
-  --background: #ffffff;
+  --background: #f9f9f9;
   --foreground: #171717;
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
@@ -32,4 +32,12 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+@font-face {
+  font-family: 'Itim';
+  src: url('/font/Itim-Regular.ttf');
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
 }
