--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,21 @@ body {
   font-weight: 400;
   font-display: swap;
 }
+
+.scrollbar-custom::-webkit-scrollbar {
+  width: 8px; /* Set the width of the scrollbar */
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: #20274d; /* Thumb color */
+  border-radius: 0x; /* Rounded corners for thumb */
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Track color */
+  border-radius: 0px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+  background-color: #20274d; /* Change thumb color on hover */
+}
